fix double scroll bar but loose fixed header

--- a/packages/components/src/AboutDialog/AboutDialog.scss
+++ b/packages/components/src/AboutDialog/AboutDialog.scss
@@ -29,18 +29,6 @@
 					text-align: left;
 				}
 
-				tbody {
-					display: block;
-					overflow: auto;
-				}
-
-				thead {
-					tr {
-						display: block;
-						position: relative;
-					}
-				}
-
 				td + td,
 				th + th {
 					border-left: 8rem solid transparent;
